--- a/client/package.json
+++ b/client/package.json
@@ -1,29 +1,49 @@
 {
-  "name": "nuxt-app",
+  "name": "electron-vue-vite",
+  "version": "28.1.0",
+  "main": "dist-electron/main/index.js",
+  "description": "Really simple Electron + Vue + Vite boilerplate.",
+  "author": "草鞋没号 <308487730@qq.com>",
+  "license": "MIT",
   "private": true,
-  "type": "module",
-  "main": "dist-electron/main.js",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+  "keywords": [
+    "electron",
+    "rollup",
+    "vite",
+    "vue3",
+    "vue"
+  ],
+  "debug": {
+    "env": {
+      "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344/"
+    }
   },
-  "dependencies": {
-    "@nuxt/ui": "^2.18.6",
-    "@pinia/nuxt": "^0.5.5",
-    "nuxt": "^3.13.0",
-    "pinia": "^2.2.4",
-    "vue": "latest",
-    "vue-router": "latest"
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build && electron-builder",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "electron": "^32.1.2",
-    "electron-builder": "^25.1.7",
-    "nuxt-electron": "^0.7.0",
-    "vite-plugin-electron": "^0.28.8",
-    "vite-plugin-electron-renderer": "^0.14.6"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.20",
+    "electron": "^29.1.1",
+    "electron-builder": "^24.13.3",
+    "postcss": "^8.4.47",
+    "sass-embedded": "^1.79.4",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.5",
+    "vite-plugin-electron": "^0.28.4",
+    "vite-plugin-electron-renderer": "^0.14.5",
+    "vue": "^3.4.21",
+    "vue-tsc": "^2.0.6"
+  },
+  "dependencies": {
+    "@primevue/themes": "^4.1.0",
+    "pinia": "^2.2.4",
+    "primevue": "^4.1.0",
+    "router": "^1.3.8",
+    "vue-router": "^4.4.5"
   }
 }
