--- a/client/package.json
+++ b/client/package.json
@@ -42,8 +42,10 @@
   "dependencies": {
     "@primevue/themes": "^4.1.0",
     "pinia": "^2.2.4",
+    "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "router": "^1.3.8",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "yup": "^1.4.0"
   }
 }
