--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,9 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.1.0",
+    "electron-store": "^10.0.0",
+    "i": "^0.3.7",
+    "npm": "^10.9.0",
     "pinia": "^2.2.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
