--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "router": "^1.3.8",
+    "socket.io-client": "^4.8.0",
     "vue-router": "^4.4.5",
     "yup": "^1.4.0"
   }
