--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "electron-store": "^10.0.0",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "luxon": "^3.5.0",
     "npm": "^10.9.0",
     "pinia": "^2.2.4",
     "primeicons": "^7.0.0",
